--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -12,6 +12,11 @@
         <domain includeSubdomains="true">10.0.2.2</domain>
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">127.0.0.1</domain>
+        <!-- Local network IPs for real device testing -->
+        <domain includeSubdomains="true">192.168.54.101</domain>
+        <domain includeSubdomains="true">192.168.137.1</domain>
+        <domain includeSubdomains="true">192.168.116.1</domain>
+        <domain includeSubdomains="true">192.168.142.1</domain>
     </domain-config>
 
     <!-- PRODUCTION: Strict HTTPS with Certificate Pinning -->
