--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <!-- Sakura theme colors -->
+    <color name="sakura_pink">#FFE91E8D</color>
+    <color name="sakura_pink_dark">#FFC2185B</color>
+    <color name="sakura_accent">#FFFCE4EC</color>
 </resources>
